New board layout. Tidied active tools/fills and hover marker

--- a/index.html
+++ b/index.html
@@ -54,34 +54,57 @@
         <section class="grid">
           <div class="row-label">
             <div class="cell-empty hidden"></div>
-            <div class="cell-label"><span>3</span></div>
-            <div class="cell-label"><span>1</span></div>
             <div class="cell-label"><span>2</span></div>
-            <div class="cell-label"><span>3</span></div>
+            <div class="cell-label"><span>4</span></div>
+            <div class="cell-label"><span></span></div>
             <div class="cell-label"><span>2</span></div>
+            <div class="cell-label"><span>4</span></div>
+            <div class="cell-label"><span></span></div>
+            <div class="cell-label"><span>2</span></div>
+            <div class="cell-label"><span>4</span></div>
           </div>
           <div class="row">
-            <div class="cell-label"><span>1</span></div>
-            <div class="cell top-row left-column h"></div>
-            <div class="cell top-row"></div>
+            <div class="cell-label"><span>2</span></div>
+            <div class="cell top-row left-column v"></div>
             <div class="cell top-row vh"></div>
-            <div class="cell top-row v"></div>
+            <div class="cell top-row h"></div>
+            <div class="cell top-row vh"></div>
+            <div class="cell top-row h"></div>
+            <div class="cell top-row vh"></div>
+            <div class="cell top-row h"></div>
             <div class="cell top-row right-column"></div>
           </div>
           <div class="row">
-            <div class="cell-label"><span>1</span></div>
+            <div class="cell-label"><span>4</span></div>
             <div class="cell left-column v"></div>
+            <div class="cell h"></div>
+            <div class="cell h"></div>
             <div class="cell v"></div>
-            <div class="cell v"></div>
+            <div class="cell h"></div>
+            <div class="cell "></div>
             <div class="cell vh"></div>
+            <div class="cell right-column h"></div>
+          </div>
+          <div class="row">
+            <div class="cell-label"><span></span></div>
+            <div class="cell left-column h"></div>
+            <div class="cell h"></div>
+            <div class="cell vh"></div>
+            <div class="cell v"></div>
+            <div class="cell v"></div>
+            <div class="cell v"></div>
+            <div class="cell v"></div>
             <div class="cell right-column"></div>
           </div>
           <div class="row">
-            <div class="cell-label"><span>3</span></div>
+            <div class="cell-label"><span>2</span></div>
             <div class="cell left-column v"></div>
+            <div class="cell "></div>
+            <div class="cell h"></div>
             <div class="cell vh"></div>
             <div class="cell v"></div>
             <div class="cell vh"></div>
+            <div class="cell v"></div>
             <div class="cell right-column"></div>
           </div>
           <div class="row">
@@ -89,14 +112,42 @@
             <div class="cell left-column vh"></div>
             <div class="cell v"></div>
             <div class="cell h"></div>
+            <div class="cell vh"></div>
             <div class="cell h"></div>
+            <div class="cell h"></div>
+            <div class="cell v"></div>
+            <div class="cell right-column"></div>
+          </div>
+          <div class="row">
+            <div class="cell-label"><span></span></div>
+            <div class="cell left-column v"></div>
+            <div class="cell h"></div>
+            <div class="cell h"></div>
+            <div class="cell vh"></div>
+            <div class="cell "></div>
+            <div class="cell vh"></div>
+            <div class="cell v"></div>
             <div class="cell right-column h"></div>
           </div>
           <div class="row">
-            <div class="cell-label"><span>3</span></div>
+            <div class="cell-label"><span>2</span></div>
+            <div class="cell left-column vh"></div>
+            <div class="cell v"></div>
+            <div class="cell h"></div>
+            <div class="cell vh"></div>
+            <div class="cell vh"></div>
+            <div class="cell vh"></div>
+            <div class="cell vh"></div>
+            <div class="cell right-column"></div>
+          </div>
+          <div class="row">
+            <div class="cell-label"><span>4</span></div>
             <div class="cell bottom-row left-column"></div>
             <div class="cell bottom-row"></div>
             <div class="cell bottom-row v"></div>
+            <div class="cell bottom-row v"></div>
+            <div class="cell bottom-row v"></div>
+            <div class="cell bottom-row"></div>
             <div class="cell bottom-row"></div>
             <div class="cell bottom-row right-column"></div>
           </div>
